adjust matrix design: equal columns

--- a/src/templates/partials/covered_cell.html
+++ b/src/templates/partials/covered_cell.html
@@ -1,4 +1,4 @@
-                    <td class="covered">
+                    <td class="covered validation-rule-cell">
                         <div class="validation-cell" data-columns="{column_names}">
                             ✅<br>
                             <small class="column-count">({column_count} cols)</small>
