--- a/src/templates/partials/validation_type_header.html
+++ b/src/templates/partials/validation_type_header.html
@@ -1,1 +1,1 @@
-                    <th>{validation_type}</th>
+                    <th class="validation-rule-header" title="{validation_type}">{validation_type_display}</th>
